tests/e2e/tests/pilot/testdata/networking/v1alpha3/sidecar-scope-ns1-ns2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: sidecar-scope-ns1-ns2
spec:
#  ingress:
#  - port:
#      number: 12345
#      protocol: HTTP
#      name: inbound-http
#    defaultEndpoint: ":80"
  egress:
  - port:
      number: 23145
      protocol: TCP
      name: outbound-tcp
    bind: 7.7.7.7
    hosts:
    - "*/bookinfo.com"
    - "*/private.com"
    # bookinfo.com is on port 9999.
    # private.com won't get imported
  - hosts:
    - "ns1/*"
    - "*/*.tcp.com"
    # Notice missing istio-system. This means a cant reach b
